--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "lodash": "4.17.20",
     "react": "17.0.0",
+    "react-bootstrap": "1.4.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3"
   },
